# GravityCore

./: .gitignore  CMakeLists.txt  README.md  compile_manual.sh  crunch_config.json  default_config.json  realtime_viz.py  requirements.txt  runRotPlot.sh  runSim.sh  slingshot_config.json
.github/workflows/: ci.yml
src/: engine.cpp  gravity.hpp  plot_rotation_curve.py
tests/: benchmark.py  demo.py  test_physics.cpp  visualize.py
